--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -1,4 +1,5 @@
 % Encoding: UTF-8
+
 @book{Knuth1998,
  author = {Knuth, Donald E.},
  title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
@@ -23,6 +24,52 @@
   title = {{CTO Roundtable: Cloud Computing}},
   volume = {52},
   year = {2009}
+}
+
+@Article{Tranter2006,
+  author       = {Tranter, S.E. and Reynolds, D.A.},
+  date         = {2006-09},
+  journaltitle = {IEEE Transactions on Audio, Speech and Language Processing},
+  title        = {An overview of automatic speaker diarization systems},
+  doi          = {10.1109/tasl.2006.878256},
+  issn         = {1558-7916},
+  number       = {5},
+  pages        = {1557--1565},
+  volume       = {14},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Article{AngueraMiro2012,
+  author       = {Anguera Miro, Xavier and Bozonnet, S. and Evans, N. and Fredouille, C. and Friedland, G. and Vinyals, O.},
+  date         = {2012-02},
+  journaltitle = {IEEE Transactions on Audio, Speech, and Language Processing},
+  title        = {Speaker Diarization: A Review of Recent Research},
+  doi          = {10.1109/tasl.2011.2125954},
+  issn         = {1558-7924},
+  number       = {2},
+  pages        = {356--370},
+  volume       = {20},
+  publisher    = {Institute of Electrical and Electronics Engineers (IEEE)},
+}
+
+@Misc{Landini2023,
+  author    = {Landini, Federico and Diez, Mireia and Stafylakis, Themos and Burget, Lukáš},
+  date      = {2023},
+  title     = {DiaPer: End-to-End Neural Diarization with Perceiver-Based Attractors},
+  doi       = {10.48550/ARXIV.2312.04324},
+  copyright = {Creative Commons Attribution Share Alike 4.0 International},
+  keywords  = {Audio and Speech Processing (eess.AS), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Misc{Wang2023,
+  author    = {Wang, Jiaming and Du, Zhihao and Zhang, Shiliang},
+  date      = {2023},
+  title     = {TOLD: A Novel Two-Stage Overlap-Aware Framework for Speaker Diarization},
+  doi       = {10.48550/ARXIV.2303.05397},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords  = {Sound (cs.SD), Artificial Intelligence (cs.AI), Audio and Speech Processing (eess.AS), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+  publisher = {arXiv},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
