--- a/bachproef/FamilienaamVoornaamBP.tex
+++ b/bachproef/FamilienaamVoornaamBP.tex
@@ -49,9 +49,9 @@
 
 %%---------- Document metadata -------------------------------------------------
 % TODO: Replace this with your own information
-\author{Ernst Aarden}
-\supervisor{Dhr. F. Van Houte}
-\cosupervisor{Mevr. S. Beeckman}
+\author{Lisa Verhoeyen}
+\supervisor{Mevr. V. Depestele}
+\cosupervisor{Dhr. J. Campens}
 \title[Optionele ondertitel]%
     {Titel van de bachelorproef}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
