--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -72,4 +72,60 @@
   publisher = {arXiv},
 }
 
+@Misc{Yu2022,
+  author    = {Yu, Fan and Du, Zhihao and Zhang, Shiliang and Lin, Yuxiao and Xie, Lei},
+  date      = {2022},
+  title     = {A Comparative Study on Speaker-attributed Automatic Speech Recognition in Multi-party Meetings},
+  doi       = {10.48550/ARXIV.2203.16834},
+  copyright = {Creative Commons Attribution Share Alike 4.0 International},
+  keywords  = {Sound (cs.SD), Computation and Language (cs.CL), Audio and Speech Processing (eess.AS), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+  publisher = {arXiv},
+}
+
+@Misc{Xia2021,
+  author    = {Xia, Wei and Lu, Han and Wang, Quan and Tripathi, Anshuman and Huang, Yiling and Moreno, Ignacio Lopez and Sak, Hasim},
+  date      = {2021},
+  title     = {Turn-to-Diarize: Online Speaker Diarization Constrained by Transformer Transducer Speaker Turn Detection},
+  doi       = {10.48550/ARXIV.2109.11641},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords  = {Audio and Speech Processing (eess.AS), Machine Learning (cs.LG), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Article{Sztaho2023,
+  author       = {Sztahó, Dávid and Fejes, Attila},
+  date         = {2023-03},
+  journaltitle = {Journal of Forensic Sciences},
+  title        = {Effects of language mismatch in automatic forensic voice comparison using deep learning embeddings},
+  doi          = {10.1111/1556-4029.15250},
+  issn         = {1556-4029},
+  number       = {3},
+  pages        = {871--883},
+  volume       = {68},
+  publisher    = {Wiley},
+}
+
+@Misc{Zhang2018,
+  author    = {Zhang, Aonan and Wang, Quan and Zhu, Zhenyao and Paisley, John and Wang, Chong},
+  date      = {2018},
+  title     = {Fully Supervised Speaker Diarization},
+  doi       = {10.48550/ARXIV.1810.04719},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords  = {Audio and Speech Processing (eess.AS), Machine Learning (cs.LG), Machine Learning (stat.ML), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+  publisher = {arXiv},
+}
+
+@Article{Khoma2023,
+  author       = {Khoma, Volodymyr and Khoma, Yuriy and Brydinskyi, Vitalii and Konovalov, Alexander},
+  date         = {2023-02},
+  journaltitle = {Sensors},
+  title        = {Development of Supervised Speaker Diarization System Based on the PyAnnote Audio Processing Library},
+  doi          = {10.3390/s23042082},
+  issn         = {1424-8220},
+  number       = {4},
+  pages        = {2082},
+  volume       = {23},
+  publisher    = {MDPI AG},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
