--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -49,7 +49,7 @@ Wanneer het gaat over de stiltefilter, besloot \textcite{Daems2023} dat deze suc
 
 Het onderzoek van \textcite{Schryver2024} had als doel om spraak naar tekst om te zetten. Hieruit moest echter de conclusie getrokken worden dat het accuraat omzetten van gesproken naar geschreven tekst nog niet mogelijk is \autocite{Schryver2024}. \textcite{Schryver2024} onderzocht ook of er mogelijkheden zijn om de performantie van de applicatie te kunnen verbeteren aangezien deze momenteel eerder traag is, maar de conclusie was dat dit niet het geval lijkt te zijn.
 
-\subsection{Onderzoek naar het onderscheiden van stemmen}
+\subsection{Onderzoek naar het onderscheiden van stemmen}%
 
 Er zijn al verschillende onderzoeken gebeurd om stemmen te onderscheiden in audio fragmenten. \textcite{Zeghidour2021} hebben een model ontworpen dat gebruik maakt van 2 convolutionele subnetwerken om zo succesvol de verschillende signalen van elkaar te onderscheiden. Het eerste subnetwerk is een 'speaker stack', die de input in kaart brengt aan de hand van een set vectoren. Het tweede subnetwerk is een 'separation stack', die gebruik maakt van de input en de vector representaties. De combinatie van deze 2 subnetwerken zorgt ervoor dat het model een representatie van elke bron maakt en op basis hiervan een schatting maakt van de gescheiden signalen. \autocite{Zeghidour2021}
 
@@ -73,13 +73,13 @@ Om een beter zicht te geven op verloop van het onderzoek voor deze bachelorproef
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\columnwidth]{img/flowchart.png}
+	\includegraphics[width=\columnwidth]{../voorstel/img/flowchart.png}
 	\caption{Flow chart}
 \end{figure}
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=\textwidth]{img/gantt.png}
+	\includegraphics[width=\textwidth]{../voorstel/img/gantt.png}
 	\caption{Gantt chart}
 \end{figure*}
 
