methodologie bp uitgewerkt

--- a/voorstel/voorstel-inhoud.tex
+++ b/voorstel/voorstel-inhoud.tex
@@ -73,7 +73,7 @@ Om een beter zicht te geven op verloop van het onderzoek voor deze bachelorproef
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\columnwidth]{../voorstel/img/flowchart.png}
+	\includegraphics{../voorstel/img/flowchart.png}
 	\caption{Flow chart}
 \end{figure}
 
